--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,3 +15,4 @@ html
       block content
     script(src="/javascripts/bundle.js")
     script(src="https://www.gstatic.com/charts/loader.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js")
